--- a/main.html
+++ b/main.html
@@ -7,6 +7,34 @@
 </head>
 
 <body>
+	<form>
+		<div>
+			<label for="name">Name</label>
+			<input type="text" id="name" min="3" max="50" required>
+		</div>
+		<div>
+			<label for="portfolio">portfolio</label>
+			<input type="text" id="portfolio" required>
+		</div>
+		 <div>
+			 <button type="submit">submit</button>
+		 </div>
+		<div>
+			<label for="favcolor"> Favcolor</label>
+			<select id="favcolor" name="favcolor">
+				<option value="red">Red</option>
+				<option value="red">blue</option>
+			</select>
+			
+		<div >
+			<label for="likeness">likeness</label>
+			 <input type="range" min="1" max="100" id="likeness" >
+		</div>
+		
+
+
+		
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
