--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		</div>
 		<div>
 			<label for="portfolio">portfolio</label>
-			<input type="text" id="portfolio" required>
+			<input type="url" id="portfolio" required>
 		</div>
 		 <div>
 			 <button type="submit">submit</button>
