--- a/main.html
+++ b/main.html
@@ -22,11 +22,9 @@
 			 <button type="submit">submit</button>
 		 </div>
 		<div>
-			<label for="favcolor"> Favcolor</label>
-			<select id="favcolor" name="favcolor">
-				<option value="red">Red</option>
-				<option value="red">blue</option>
-			</select>
+			<label for="favcolor" typ> Favcolor</label>
+			<input type="color" id = "favcolor">
+			
 			
 		<div >
 			<label for="likeness">likeness</label>
