--- a/main.html
+++ b/main.html
@@ -22,8 +22,8 @@
 			 <button type="submit">submit</button>
 		 </div>
 		<div>
-			<label for="favcolor" typ> Favcolor</label>
-			<input type="color" id = "favcolor">
+			<label for="favColor" typ> Favcolor</label>
+			<input type="color" id = "favColor">
 			
 			
 		<div >
